# BG3-Armor-Patcher

./: README.md
Source_Code/C/: .env  .gitignore  BG3_Armor_Patcher.bat  LICENSE  README.md  pyproject.toml  run_ui.bat  run_ui.py
Source_Code/C/presets/: ClawstepSatyr.json  MultipleRaces.json
Source_Code/C/src/bg3_armor_patcher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Source_Code/C/src/bg3_patcher/: __init__.py  cli.py  lsx.py  merger.py  models.py  presets.py  scanner.py
Source_Code/C/src/bg3_patcher/ui/: __init__.py  app.py
Source_Code/C/tests/: test_lsx.py  test_merger.py  test_scanner.py
Source_Code/C/tools/: build_launcher.ps1  frozen_ui_entry.py  prepare_portable_package.ps1  win_launcher.py
