[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bg3-armor-patcher"
version = "0.1.0"
description = "Desktop and command-line helper for generating BG3 armor root template patches."
authors = [{ name = "AkELkA" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]
launcher = [
    "pyinstaller>=6",
]

[project.scripts]
bg3-armor-patcher = "bg3_patcher.cli:main"
bg3-armor-patcher-ui = "bg3_patcher.ui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
